fix incorrect alignment of the interest items when there are 4 items

--- a/assets/scss/components/_interests.scss
+++ b/assets/scss/components/_interests.scss
@@ -1,12 +1,26 @@
 .interests {
     display: block;
-    -moz-column-count: 2;
-    column-count: 2;
-    width: 100%;
-    text-align: right;
+    width: 50%;
+    margin: 0;
+    padding: 0;
     @include avoid-break;
 
-    &__item:nth-child(n+4) {
+    &--left {
+        text-align: right;
+        padding-right: 0.5rem;
+    }
+
+    &--right {
         text-align: left;
+        padding-left: 0.5rem;
+    }
+
+    &__item {
+        list-style: none;
+    }
+
+    &__columns {
+        display: flex;
+        width: 100%;
     }
 }
